--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,20 @@
     <title>News Scraper</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="./styles/style.css">
+    <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- <div id="wrapper">
-        <h1>News Scraper</h1>
-        <div id="articles"></div>
-        <div id="notes"></div>
-    </div> -->
 
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome to News Scraper!</h1>
-        <p class="lead">Here, you'll find articles from CBS News. Want to leave a note for an article? Just click on the
+    <img src="./assets/headerImage.jpeg" alt="newspaper">
+
+    <div class="jumbotron jumbotron-dark bg-dark">
+        <h1 id="jumbotronText" class="display-4">Welcome to News Scraper!</h1>
+        <p id="jumbotronText" class="lead">Here, you'll find articles from CBS News. Want to leave a note for an article? Just click on the
             article and
             an option to do so will appear!
         </p>
-        <p>(Want to look at notes that have already been saved? Then click <a href=/notes>here</a>)</p>
+        <p><small id="jumbotronText">(Want to look at notes that have already been saved? Then click <a href=/notes>here</a>)</small></p>
     </div>
 
     <div class="container">
@@ -33,7 +30,7 @@
             <div class="col-md-3">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                        <h5 class="card-title">Articles</h5>
+                        <h3 class="card-title">Articles</h5>
                         <div id="articles"></div>
                     </div>
                 </div>
@@ -44,7 +41,7 @@
             <div class="col-md-3">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                        <h5 class="card-title">Notes</h5>
+                        <h3 class="card-title">Notes</h5>
                         <div id="notes">
 
                         </div>
