--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,27 @@
             "Add a Note" button and
             an option to do so will appear!
         </p>
-        <p id="jumbotronText"><small>Want to see all the saved notes? Then click <a href="/notes">here</a></small></p>
     </div>
 
     <div class="container">
         <div id="articles">
             <h2>Articles</h2>
 
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Add a new note</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                        <div class="modal-body" id="newNote">
+                            
+                        </div>
+                    </div>
+                </div>
+              </div>
         </div>
     </div>
 
