fixed routes so that a button to scrape articles couuld be used

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,13 @@
 
     <div class="jumbotron jumbotron-dark bg-dark">
         <h1 id="jumbotronText" class="display-4">Welcome to News Scraper!</h1>
-        <p id="jumbotronText" class="lead">Here, you'll find articles from CBS News. Want to leave a note for an article? Just click on the
+        <p id="jumbotronText">Click the button to the right to find all the articles from the CBS News website. <button type="button" id="scrapeButton" class="btn btn-primary">Scrape Articles!</button></p>
+        
+        <p id="jumbotronText" class="lead">Want to leave a note for an article? Just click on the
             "Add a Note" button and
             an option to do so will appear!
         </p>
+        <p id="jumbotronText">Want to see the note added to an Article? Just click on the "Note for this Article" button!</p>
     </div>
 
     <div class="container">
