final, working commit for production deployment

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
             an option to do so will appear!
         </p>
         <p id="jumbotronText">Want to see the note added to an Article? Just click on the "Note for this Article" button!</p>
+        <p id="jumbotronText"><sup>(If nothing happens when the "Note for This Article" button is clicked, there aren't any notes saved for that article yet)</sup></p>
     </div>
 
     <div class="container">
