--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <div class="container">
         <div id="articles">
-            <h2>Articles</h2>
+            <!-- <h2>Articles</h2> -->
 
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
